fix height to avoid jump

--- a/addon/tailwind/components/bourbon-select-field.css
+++ b/addon/tailwind/components/bourbon-select-field.css
@@ -9,7 +9,7 @@
   white-space: normal;
   transform: rotateZ(0);
   min-width: 22em;
-  min-height: 2em;
+  height: 3em;
   background: var(--white);
   color: var(--black);
   border: 1px solid var(--alto);
